# odoo-backup-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.test  INSTALL.md  Makefile  README.md  RELEASES.md  TESTING.md  config.json.example  databases.json
.github/workflows/: build-and-release.yml  ci.yml
debian/: changelog  control  copyright  install  rules
scripts/: release.sh  test-debian-build.sh  test-local.sh
src/: backup.rs  cli.rs  config.rs  docker.rs  error.rs  lib.rs  main.rs
