[package]
name = "odoo-backup-service"
version = "0.1.1"
edition = "2021"
authors = ["Daniel <daniel.uremix@gmail.com>"]
description = "A Rust CLI application to automate Odoo backups inside Docker containers"

[[bin]]
name = "odoo-backup-service"
path = "src/main.rs"

[lib]
name = "odoo_backup_service"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.0"
